# smart_buffer

./: .gitignore  Cargo.toml  README.md
src/: index.rs  into.rs  iter.rs  lib.rs
