[package]
name = "smart_buffer"
version = "0.1.2"
authors = ["mov-rax <csharper.work@gmail.com>"]
edition = "2018"
description = "A hybrid stack/heap buffer"
repository = "https://github.com/mov-rax/smart_buffer"
license = "MIT OR Apache-2.0"
keywords = ["no_std", "buffer","data-structures","heap","stack"]
exclude = [".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

